--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
     <title>HTML Academy: Техномарт</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700|PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/min-style.css">
 </head>
 <body class="catalog-page">
 
@@ -327,7 +327,7 @@
                     <ul class="goods-list">
 
                         <li class="goods-list__item">
-                            <img class="goods-list__img" src="img/popular-goods/Perforator_2.png" alt="BOSCH BFG 9000">
+                            <img class="goods-list__img" src="img/popular-goods/Perforator_2.png" alt="BOSCH BFG 9000" width="218" height="170">
                             <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 3000
                             </h3>
@@ -347,7 +347,7 @@
                             </div>
                         </li>
                         <li class="goods-list__item">
-                            <img class="goods-list__img" src="img/popular-goods/Perforator_3.png" alt="BOSCH BFG 3000">
+                            <img class="goods-list__img" src="img/popular-goods/Perforator_3.png" alt="BOSCH BFG 3000" width="218" height="170">
                             <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 6000
                             </h3>
@@ -368,7 +368,7 @@
                         </li>
                         <li class="goods-list__item goods-list__item_new">
                             <div class="new-flag"></div>
-                            <img class="goods-list__img" src="img/popular-goods/Perforator_4.png" alt="BOSCH BFG 6000">
+                            <img class="goods-list__img" src="img/popular-goods/Perforator_4.png" alt="BOSCH BFG 6000" width="218" height="170">
                             <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 2000
                             </h3>
@@ -385,7 +385,7 @@
                             </div>
                         </li>
                         <li class="goods-list__item">
-                            <img class="goods-list__img" src="img/popular-goods/Perforator_2.png" alt="BOSCH BFG 9000">
+                            <img class="goods-list__img" src="img/popular-goods/Perforator_2.png" alt="BOSCH BFG 9000" width="218" height="170">
                             <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 3000
                             </h3>
@@ -405,7 +405,7 @@
                             </div>
                         </li>
                         <li class="goods-list__item goods-list__item_new">
-                            <img class="goods-list__img" src="img/popular-goods/Perforator_3.png" alt="BOSCH BFG 3000">
+                            <img class="goods-list__img" src="img/popular-goods/Perforator_3.png" alt="BOSCH BFG 3000" width="218" height="170">
                             <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 6000
                             </h3>
@@ -426,7 +426,7 @@
                         </li>
                         <li class="goods-list__item">
                             <div class="new-flag"></div>
-                            <img class="goods-list__img" src="img/popular-goods/Perforator_4.png" alt="BOSCH BFG 6000">
+                            <img class="goods-list__img" src="img/popular-goods/Perforator_4.png" alt="BOSCH BFG 6000" width="218" height="170">
                             <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 2000
                             </h3>
@@ -443,7 +443,7 @@
                             </div>
                         </li>
                         <li class="goods-list__item goods-list__item_new">
-                            <img class="goods-list__img" src="img/popular-goods/Perforator_2.png" alt="BOSCH BFG 9000">
+                            <img class="goods-list__img" src="img/popular-goods/Perforator_2.png" alt="BOSCH BFG 9000" width="218" height="170">
                             <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 3000
                             </h3>
@@ -463,7 +463,7 @@
                             </div>
                         </li>
                         <li class="goods-list__item">
-                            <img class="goods-list__img" src="img/popular-goods/Perforator_3.png" alt="BOSCH BFG 3000">
+                            <img class="goods-list__img" src="img/popular-goods/Perforator_3.png" alt="BOSCH BFG 3000" width="218" height="170">
                             <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 6000
                             </h3>
@@ -484,7 +484,7 @@
                         </li>
                         <li class="goods-list__item">
                             <div class="new-flag"></div>
-                            <img class="goods-list__img" src="img/popular-goods/Perforator_4.png" alt="BOSCH BFG 6000">
+                            <img class="goods-list__img" src="img/popular-goods/Perforator_4.png" alt="BOSCH BFG 6000" width="218" height="170">
                             <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 2000
                             </h3>
