--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>HTML Academy: Техномарт</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700|PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/min-style.css">
 </head>
 <body class="main-page">
 
@@ -52,7 +52,7 @@
                 <div class="header-content__inner">
 
                     <p class="header-content__text">
-                        Интернет-магазин строительных материалов <br>и инструментов для ремонта
+                        Интернет-магазин строительных материалов и&nbsp;инструментов для ремонта
                     </p>
                     <address class="header-content__contact">
                         <a class="header-content__tel" href="tel:88125550555">
@@ -65,13 +65,11 @@
                     <ul class="header-content__list user-list">
                         <li class="user-list__item">
                             <a class="user-list__link user-list__log" href="#">
-                                <svg class="user-list__icon-login" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	                                width="20px" height="17px" viewBox="0 0 20 17" enable-background="new 0 0 20 17" xml:space="preserve">
+                                <svg class="user-list__icon-login" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20px" height="17px" viewBox="0 0 20 17" enable-background="new 0 0 20 17" xml:space="preserve">
                                     <g>
                                         <polygon points="14.875,8.5 6,0 6,6 0,6 0,11 6,11 6,17 	"/>
                                     </g>
-                                    <path d="M16.986,15.01h-5.027V17h5.027c2.178,0,3.004-1.81,3.029-3.026V3.028C19.99,1.811,19.164,0,16.986,0h-5.027
-                                        v1.99h5.027c0.839,0,0.992,0.681,1.01,1.057v10.904C17.979,14.327,17.825,15.01,16.986,15.01z"/>
+                                    <path d="M16.986,15.01h-5.027V17h5.027c2.178,0,3.004-1.81,3.029-3.026V3.028C19.99,1.811,19.164,0,16.986,0h-5.027 v1.99h5.027c0.839,0,0.992,0.681,1.01,1.057v10.904C17.979,14.327,17.825,15.01,16.986,15.01z"/>
                                 </svg>
                                 Войти
                             </a>
@@ -166,8 +164,8 @@
 
                         <div class="features__slider slider">
 
-                            <input class="visually-hidden" id="slide1" type="radio" name="toggle" checked>
-                            <input class="visually-hidden" id="slide2" type="radio" name="toggle">
+                            <input class="visually-hidden slide1" id="slide1" type="radio" name="toggle" checked>
+                            <input class="visually-hidden slide2" id="slide2" type="radio" name="toggle">
 
                             <div class="slider__controls">
 
@@ -521,10 +519,10 @@
                         <p class="information-contact__text"> 
                             Вы можете забрать товар сами, заехав в наш офис:
                         </p>
-                        <a class="information-contact__card" href="#">
+                        <a class="information-contact__card" href="map.html">
                             <img class="information-contact__img" src="img/information/map.jpg" alt="Map" width="300" height="158">
                         </a>
-                        <a class="information-contact__link btn-red" href="#">
+                        <a class="information-contact__link btn-red" href="writeus.html">
                             Заблудились? Напишите нам!
                         </a>
 
