--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
 
             <div class="map__inner">
                 <div class="map-content">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d342.0565732549793!2d30.322921267988338!3d59.9387588428442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1570292910890!5m2!1sru!2sru" width="940" height="446" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d594.1876976745552!2d30.323148182178166!3d59.93875908108004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1570637560138!5m2!1sru!2sru" width="940" height="446" style="border:0;" allowfullscreen=""></iframe>
                 </div>
                 <button class="btn-close">
                     <span class="visually-hidden">
