--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>HTML Academy: Техномарт</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700%7CPT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="css/min-style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="main-page">
 
@@ -266,7 +266,7 @@
                 <ul class="popular-goods__list goods-list">
 
                     <li class="goods-list__item">
-                        <img class="goods-list__img" src="img/popular-goods/Perforator_1.png" alt="Перфоратор BOSCH BFG 9000" width="218" height="170">
+                        <img class="goods-list__img" src="img/popular-goods/perforator_1.png" alt="Перфоратор BOSCH BFG 9000" width="218" height="170">
                         <h2 class="goods-list__title">
                             Перфоратор BOSCH BFG 9000
                         </h2>
@@ -286,7 +286,7 @@
                         </div>
                     </li>
                     <li class="goods-list__item">
-                        <img class="goods-list__img" src="img/popular-goods/Perforator_2.png" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
+                        <img class="goods-list__img" src="img/popular-goods/perforator_2.png" alt="Перфоратор BOSCH BFG 3000" width="218" height="170">
                         <h2 class="goods-list__title">
                             Перфоратор BOSCH BFG 3000
                         </h2>
@@ -306,7 +306,7 @@
                         </div>
                     </li>
                     <li class="goods-list__item">
-                        <img class="goods-list__img" src="img/popular-goods/Perforator_3.png" alt="Перфоратор BOSCH BFG 6000" width="218" height="170">
+                        <img class="goods-list__img" src="img/popular-goods/perforator_3.png" alt="Перфоратор BOSCH BFG 6000" width="218" height="170">
                         <h2 class="goods-list__title">
                             Перфоратор BOSCH BFG 6000
                         </h2>
@@ -326,7 +326,7 @@
                         </div>
                     </li>
                     <li class="goods-list__item goods-list__item_new">
-                        <img class="goods-list__img" src="img/popular-goods/Perforator_4.png" alt="Перфоратор BOSCH BFG 2000" width="218" height="170">
+                        <img class="goods-list__img" src="img/popular-goods/perforator_4.png" alt="Перфоратор BOSCH BFG 2000" width="218" height="170">
                         <h2 class="goods-list__title">
                             Перфоратор BOSCH BFG 2000
                         </h2>
@@ -366,42 +366,42 @@
 
                     <li class="manufacturer-list__item">
                         <a class="manufacturer-list__link" href="#">
-                            <img class="manufacturer-list__img" src="img/popular_manufacturer/bosch.png" alt="Bosch" width="126" height="37">
+                            <img class="manufacturer-list__img" src="img/popular_manufacturer/bosch.png" alt="bosch" width="126" height="37">
                         </a>
                     </li>
                     <li class="manufacturer-list__item">
                         <a class="manufacturer-list__link" href="#">
-                            <img class="manufacturer-list__img" src="img/popular_manufacturer/Makita.png" alt="Makita" width="123" height="40">
+                            <img class="manufacturer-list__img" src="img/popular_manufacturer/makita.png" alt="makita" width="123" height="40">
                         </a>
                     </li>
                     <li class="manufacturer-list__item">
                         <a class="manufacturer-list__link" href="#">
-                            <img class="manufacturer-list__img" src="img/popular_manufacturer/DeWALT.png" alt="DeWALT" width="146" height="44">
+                            <img class="manufacturer-list__img" src="img/popular_manufacturer/dewalt.png" alt="dewalt" width="146" height="44">
                         </a>
                     </li>
                     <li class="manufacturer-list__item">
                         <a class="manufacturer-list__link" href="#">
-                            <img class="manufacturer-list__img" src="img/popular_manufacturer/Интерскол.png" alt="ИНТЕРСКОЛ" width="200" height="88">
+                            <img class="manufacturer-list__img" src="img/popular_manufacturer/interskol.png" alt="интерскол" width="200" height="88">
                         </a>
                     </li>
                     <li class="manufacturer-list__item">
                         <a class="manufacturer-list__link" href="#">
-                            <img class="manufacturer-list__img" src="img/popular_manufacturer/Hitachi.png" alt="HITACHI" width="169" height="31">
+                            <img class="manufacturer-list__img" src="img/popular_manufacturer/hitachi.png" alt="hitachi" width="169" height="31">
                         </a>
                     </li>
                     <li class="manufacturer-list__item">
                         <a class="manufacturer-list__link" href="#">
-                            <img class="manufacturer-list__img" src="img/popular_manufacturer/LG.png" alt="LG" width="121" height="73">
+                            <img class="manufacturer-list__img" src="img/popular_manufacturer/lg.png" alt="lg" width="121" height="73">
                         </a>
                     </li>
                     <li class="manufacturer-list__item">
                         <a class="manufacturer-list__link" href="#">
-                            <img class="manufacturer-list__img" src="img/popular_manufacturer/AEG.png" alt="AEG" width="151" height="96">
+                            <img class="manufacturer-list__img" src="img/popular_manufacturer/aeg.png" alt="aeg" width="151" height="96">
                         </a>
                     </li>
                     <li class="manufacturer-list__item">
                         <a class="manufacturer-list__link" href="#">
-                            <img class="manufacturer-list__img" src="img/popular_manufacturer/Metabo.png" alt="metabo" width="204" height="69">
+                            <img class="manufacturer-list__img" src="img/popular_manufacturer/metabo.png" alt="metabo" width="204" height="69">
                         </a>
                     </li>
 
@@ -725,6 +725,7 @@
 
     </footer>  <!-- /.footer -->
 
-    <script src="js/main.js"></script>
+
+    <script src="js/min-main.js"></script>
   </body>
 </html>
