--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
     <title>HTML Academy: Техномарт</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700%7CPT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
-    <link rel="stylesheet" href="css/min-style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="catalog-page">
 
@@ -308,11 +308,17 @@
                         <ul class="list-arrow">
                             <li class="list-arrow__item">
                                 <a class="list-arrow__link list-arrow__link_active" href="#">
+                                    <span class="visually-hidden">
+                                        Сортировки по возрастанию
+                                    </span>
                                     <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path d="M5.5 0L0 10h11z"/></svg>
                                 </a>
                             </li>
                             <li class="list-arrow__item">
                                 <a class="list-arrow__link" href="#">
+                                    <span class="visually-hidden">
+                                        Сортировки по убыванию
+                                    </span>
                                     <svg class="list-arrow__link-down" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	                                    width="11px" height="10px" viewBox="0 0 11 10" enable-background="new 0 0 11 10" xml:space="preserve">
                                         <polyline points="5.5,10 0,0 11,0 "/>
@@ -326,7 +332,7 @@
                     <ul class="goods-list">
 
                         <li class="goods-list__item">
-                            <img class="goods-list__img" src="img/popular-goods/Perforator_2.png" alt="BOSCH BFG 9000" width="218" height="170">
+                            <img class="goods-list__img" src="img/popular-goods/perforator_2.png" alt="BOSCH BFG 9000" width="218" height="170">
                             <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 3000
                             </h3>
@@ -346,7 +352,7 @@
                             </div>
                         </li>
                         <li class="goods-list__item">
-                            <img class="goods-list__img" src="img/popular-goods/Perforator_3.png" alt="BOSCH BFG 3000" width="218" height="170">
+                            <img class="goods-list__img" src="img/popular-goods/perforator_3.png" alt="BOSCH BFG 3000" width="218" height="170">
                             <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 6000
                             </h3>
@@ -367,7 +373,7 @@
                         </li>
                         <li class="goods-list__item goods-list__item_new">
                             <div class="new-flag"></div>
-                            <img class="goods-list__img" src="img/popular-goods/Perforator_4.png" alt="BOSCH BFG 6000" width="218" height="170">
+                            <img class="goods-list__img" src="img/popular-goods/perforator_4.png" alt="BOSCH BFG 6000" width="218" height="170">
                             <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 2000
                             </h3>
@@ -384,7 +390,7 @@
                             </div>
                         </li>
                         <li class="goods-list__item">
-                            <img class="goods-list__img" src="img/popular-goods/Perforator_2.png" alt="BOSCH BFG 9000" width="218" height="170">
+                            <img class="goods-list__img" src="img/popular-goods/perforator_2.png" alt="BOSCH BFG 9000" width="218" height="170">
                             <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 3000
                             </h3>
@@ -404,7 +410,7 @@
                             </div>
                         </li>
                         <li class="goods-list__item goods-list__item_new">
-                            <img class="goods-list__img" src="img/popular-goods/Perforator_3.png" alt="BOSCH BFG 3000" width="218" height="170">
+                            <img class="goods-list__img" src="img/popular-goods/perforator_3.png" alt="BOSCH BFG 3000" width="218" height="170">
                             <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 6000
                             </h3>
@@ -425,7 +431,7 @@
                         </li>
                         <li class="goods-list__item">
                             <div class="new-flag"></div>
-                            <img class="goods-list__img" src="img/popular-goods/Perforator_4.png" alt="BOSCH BFG 6000" width="218" height="170">
+                            <img class="goods-list__img" src="img/popular-goods/perforator_4.png" alt="BOSCH BFG 6000" width="218" height="170">
                             <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 2000
                             </h3>
@@ -442,7 +448,7 @@
                             </div>
                         </li>
                         <li class="goods-list__item goods-list__item_new">
-                            <img class="goods-list__img" src="img/popular-goods/Perforator_2.png" alt="BOSCH BFG 9000" width="218" height="170">
+                            <img class="goods-list__img" src="img/popular-goods/perforator_2.png" alt="BOSCH BFG 9000" width="218" height="170">
                             <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 3000
                             </h3>
@@ -462,7 +468,7 @@
                             </div>
                         </li>
                         <li class="goods-list__item">
-                            <img class="goods-list__img" src="img/popular-goods/Perforator_3.png" alt="BOSCH BFG 3000" width="218" height="170">
+                            <img class="goods-list__img" src="img/popular-goods/perforator_3.png" alt="BOSCH BFG 3000" width="218" height="170">
                             <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 6000
                             </h3>
@@ -483,7 +489,7 @@
                         </li>
                         <li class="goods-list__item">
                             <div class="new-flag"></div>
-                            <img class="goods-list__img" src="img/popular-goods/Perforator_4.png" alt="BOSCH BFG 6000" width="218" height="170">
+                            <img class="goods-list__img" src="img/popular-goods/perforator_4.png" alt="BOSCH BFG 6000" width="218" height="170">
                             <h3 class="goods-list__title">
                                 Перфоратор BOSCH BFG 2000
                             </h3>
@@ -701,7 +707,6 @@
     </footer>
 
 
-
-    <script src="js/main.js"></script>
+    <script src="js/min-main.js"></script>
 </body>
 </html>
